# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#meta-1
[metadata]
name = configmelt
version = 1.0.2
author = anglisanosa
author_email = marcanglisano@gmail.com
url=https://github.com/anglisanosa/configmelt
project_urls=
    Documentation= https://anglisanosa.github.io/configmelt/
    Bug Reports= https://github.com/anglisanosa/configmelt/issues
    Source=https://github.com/anglisanosa/configmelt

description = 'config loader for json and yml files'
long_description = file: README.md
long_description_content_type = text/markdown
license = ""
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt

include_package_data = True


# [options.package_data]
# configmelt =
#     resources/**

[options.packages.find]
include=
    configmelt
    configmelt.*

[options.extras_require]
dev = file: requirements-dev.txt
